--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
   "dev": "nodemon src/server.js",
-    "prod" : "node src/server.js",
+    "prod" : "node src/server.js"
   },
 "type" : "module",
   "keywords": [],
